tests/rosetta/out/Zig/15-puzzle-solver.error
zig build: exit status 1
/tmp/15-puzzle-solver.zig:5:34: error: use of undeclared identifier 'testpkg'
