tests/rosetta/out/Zig/15-puzzle-solver.zig
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:03:03Z
const std = @import("std");

pub fn main() void {
    std.debug.print("{any}\n", .{testpkg.FifteenPuzzleExample()});
}
